add packageRules for k8s.io

--- a/renovate.json
+++ b/renovate.json
@@ -2,5 +2,12 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "config:base"
+  ],
+  "packageRules": [
+    {
+      "packagePatterns": [ "k8s.io/*" ],
+      "excludePackageNames": ["k8s.io/klog"],
+      "groupName": "k8s.io"
+    }
   ]
 }
