--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ stages:
   - lint
   - test
   - build
+  - scan
   - publish
 
 include:
@@ -54,7 +55,7 @@ docker:promote:
   tags: [docker]
 
 trivy:scan:image:
-  stage: test
+  stage: scan
   image:
     name: docker.io/aquasec/trivy:latest
     entrypoint: [""]
