--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -19,7 +19,8 @@ brews:
     # Default for github is "https://github.com/<repo_owner>/<repo_name>/releases/download/{{ .Tag }}/{{ .ArtifactName }}"
     # Default for gitlab is "https://gitlab.com/<repo_owner>/<repo_name>/-/releases/{{ .Tag }}/downloads/{{ .ArtifactName }}"
     # Default for gitea is "https://gitea.com/<repo_owner>/<repo_name>/releases/download/{{ .Tag }}/{{ .ArtifactName }}"
-    url_template: "https://gitlab.avisi.cloud/ame/acloud-toolkit/-/releases/{{ .Tag }}/downloads/{{ .ArtifactName }}"
+    # url_template: "https://gitlab.avisi.cloud/ame/acloud-toolkit/-/releases/{{ .Tag }}/downloads/{{ .ArtifactName }}"
+    url_template: "https://avisi-cloud-brew-tap-public.s3.eu-west-1.amazonaws.com/releases/final/{{.Tag}}/{{ .ArtifactName }}"
 
     # Allows you to set a custom download strategy. Note that you'll need
     # to implement the strategy and add it to your tap repository.
@@ -110,3 +111,9 @@ brews:
 #    post_install: |
 #      etc.install "app-config.conf"
 #      ...
+
+blobs:
+- provider: s3
+  bucket: avisi-cloud-brew-tap-public
+  folder: "releases/final/{{.Version}}"
+  region: eu-west-1
