--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -2,10 +2,23 @@ gitlab_urls:
   api: https://gitlab.avisi.cloud/api/v4/
   download: https://gitlab.avisi.cloud
 
+builds:
+  - id: "acloud-toolkit"
+    env:
+      - CGO_ENABLED=0
+    goos:
+      - linux
+      - darwin
+    goarch:
+      - amd64
+      - arm64
+
+before:
+  hooks:
+    - go mod tidy
 
 brews:
-  -
-    # NOTE: make sure the url_template, the token and given repo (github or gitlab) owner and name are from the
+  - # NOTE: make sure the url_template, the token and given repo (github or gitlab) owner and name are from the
     # same kind. We will probably unify this in the next major version like it is done with scoop.
 
     # GitHub/GitLab repository to push the formula to
@@ -30,7 +43,7 @@ brews:
 
     # Allows you to add a custom require_relative at the top of the formula template
     # Default is empty
-#    custom_require: private-gitlab-download-strategy
+    #    custom_require: private-gitlab-download-strategy
 
     # Git author used to commit to the repository.
     # Defaults are shown.
@@ -47,7 +60,7 @@ brews:
 
     # Caveats for the user of your binary.
     # Default is empty.
-#    caveats: "How to use this binary"
+    #    caveats: "How to use this binary"
 
     # Your app's homepage.
     # Default is empty.
@@ -55,11 +68,11 @@ brews:
 
     # Template of your app's description.
     # Default is empty.
-#    description: "Software to create fast and easy drum rolls."
+    #    description: "Software to create fast and easy drum rolls."
 
     # SPDX identifier of your app's license.
     # Default is empty.
-#    license: "MIT"
+    #    license: "MIT"
 
     # Setting this will prevent goreleaser to actually try to commit the updated
     # formula - instead, the formula file will be stored on the dist folder only,
@@ -67,32 +80,32 @@ brews:
     # If set to auto, the release will not be uploaded to the homebrew tap
     # in case there is an indicator for prerelease in the tag e.g. v1.0.0-rc1
     # Default is false.
-#    skip_upload: true
+    #    skip_upload: true
 
     # Custom block for brew.
     # Can be used to specify alternate downloads for devel or head releases.
     # Default is empty.
-#    custom_block: |
-#      head "https://github.com/some/package.git"
-#      ...
+    #    custom_block: |
+    #      head "https://github.com/some/package.git"
+    #      ...
 
     # Packages your package depends on.
     dependencies:
       - name: zsh
         type: optional
-      - name: fnf
+      - name: fzf
         type: optional
 
     # Packages that conflict with your package.
-#    conflicts:
-#      - svn
-#      - bash
+    #    conflicts:
+    #      - svn
+    #      - bash
 
     # Specify for packages that run as a service.
     # Default is empty.
-#    plist: |
-#      <?xml version="1.0" encoding="UTF-8"?>
-#      ...
+    #    plist: |
+    #      <?xml version="1.0" encoding="UTF-8"?>
+    #      ...
 
     # So you can `brew test` your formula.
     # Default is empty.
@@ -101,9 +114,9 @@ brews:
 
     # Custom install script for brew.
     # Default is 'bin.install "program"'.
-#    install: |
-#      bin.install "acloud"
-#      ...
+    #    install: |
+    #      bin.install "acloud"
+    #      ...
 
     # Custom post_install script for brew.
     # Could be used to do any additional work after the "install" script
@@ -113,7 +126,7 @@ brews:
 #      ...
 
 blobs:
-- provider: s3
-  bucket: avisi-cloud-brew-tap-public
-  folder: "releases/{{ .ProjectName }}/{{.Version}}"
-  region: eu-west-1
+  - provider: s3
+    bucket: avisi-cloud-brew-tap-public
+    folder: "releases/{{ .ProjectName }}/{{.Version}}"
+    region: eu-west-1
