--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -70,16 +70,6 @@ go:build:
 
 release:
   stage: release
-  image:
-    name: goreleaser/goreleaser:v1.9.2
-    entrypoint: ['']
+  extends: .go:release
   only:
     - tags
-  variables:
-    # Disable shallow cloning so that goreleaser can diff between tags to
-    # generate a changelog.
-    GIT_DEPTH: 0
-    GORELEASER_CURRENT_TAG: ${CI_COMMIT_TAG}
-  script:
-    - goreleaser release --rm-dist
-  dependencies: []
