--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -130,3 +130,23 @@ blobs:
     bucket: avisi-cloud-brew-tap-public
     folder: "releases/{{ .ProjectName }}/{{.Version}}"
     region: eu-west-1
+
+# Documentation: https://goreleaser.com/customization/changelog/
+changelog:
+  use: gitlab
+  sort: asc
+  # Group commits messages by given regex and title.
+  # Order value defines the order of the groups.
+  # Proving no regex means all commits will be grouped under the default group.
+  # Groups are disabled when using github-native, as it already groups things by itself.
+  groups:
+    - title: 'Dependencies'
+      regexp: "^Update dependency"
+      order: 999
+    - title: Changes
+      order: 0
+  filters:
+    # Commit messages matching the regexp listed here will be removed from the changelog
+    exclude:
+      - '^Merge branch'
+
