--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -16,6 +16,11 @@ builds:
 before:
   hooks:
     - go mod tidy
+    - ./scripts/shell-completions.sh
+
+archives:
+  - files:
+      - completions/*
 
 brews:
   - # NOTE: make sure the url_template, the token and given repo (github or gitlab) owner and name are from the
@@ -23,7 +28,7 @@ brews:
 
     # GitHub/GitLab repository to push the formula to
     # Gitea is not supported yet, but the support coming
-    tap:
+    repository:
       owner: ame
       name: homebrew-ame
       token: "{{ .Env.HOMEBREW_TAP_GITLAB_TOKEN }}"
@@ -117,6 +122,11 @@ brews:
     #    install: |
     #      bin.install "acloud"
     #      ...
+    install: |
+      bin.install "acloud-toolkit"
+      zsh_completion.install "completions/acloud-toolkit.zsh" => "_acloud-toolkit"
+      bash_completion.install "completions/acloud-toolkit.bash" => "acloud-toolkit"
+      fish_completion.install "completions/acloud-toolkit.fish"
 
     # Custom post_install script for brew.
     # Could be used to do any additional work after the "install" script
