--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: goreleaser build
+name: build and test
 
 on:
   workflow_dispatch:
@@ -8,6 +8,24 @@ on:
     branches: [ "main" ]
 
 jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Clone the code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version-file: "go.mod"
+
+      - name: Running Tests
+        run: |
+          go mod tidy
+          make test
+
   goreleaser-build:
     runs-on: ubuntu-latest
     steps:
