--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -22,18 +22,24 @@ archives:
   - files:
       - completions/*
 
-homebrew_casks:
+brews:
   - repository:
       owner: avisi-cloud
       name: homebrew-tools
       token: "{{ .Env.HOMEBREW_TOOLS_GITHUB_TOKEN }}"
     homepage: "https://docs.avisi.cloud/docs/cli/acloud-toolkit/overview"
-    conflicts:
-      - formula: "acloud-toolkit"
-    completions:
-      bash: completions/acloud-toolkit.bash
-      zsh: completions/acloud-toolkit.zsh
-      fish: completions/acloud-toolkit.fish
+    dependencies:
+      - name: zsh
+        type: optional
+      - name: fzf
+        type: optional
+    test: |
+      system "#{bin}/acloud-toolkit version"
+    install: |
+      bin.install "acloud-toolkit"
+      zsh_completion.install "completions/acloud-toolkit.zsh" => "_acloud-toolkit"
+      bash_completion.install "completions/acloud-toolkit.bash" => "acloud-toolkit"
+      fish_completion.install "completions/acloud-toolkit.fish"
 
 release:
   footer: |
